feat: Добавлено много всего, подробности в описании
+ Красивый логгер
+ sql-builder
+ Изменены работы ручек
+ Добавлены логи на запросы
